# kruler

./: .Makefile.am.swp  .arcconfig  .flatpak-manifest.json  .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  Makefile.am  Messages.sh  TODO  cfg_advanced.ui  cfg_appearance.ui  conanfile.txt  eventsrc  klineal.cpp  klineal.h  kruler.desktop  kruler.kcfg  kruler.kcfgc  kruler.notifyrc  krulerconfig.h.in  krulersystemtray.cpp  krulersystemtray.h  main.cpp  org.kde.kruler.appdata.xml  org.kde.kruler.desktop  qautosizelabel.cpp  qautosizelabel.h  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
pics/: CMakeLists.txt  Makefile.am  oxsc-apps-kruler.svgz
pics/small/: ox16-apps-kruler.svgz  ox22-apps-kruler.svgz
po/af/: kruler.po
po/ar/: kruler.po
po/ast/: kruler.po
po/be/: kruler.po
po/bg/: kruler.po
po/br/: kruler.po
po/bs/: kruler.po
po/ca/: kruler.po
po/ca/docs/kruler/: index.docbook
po/ca@valencia/: kruler.po
po/cs/: kruler.po
po/cy/: kruler.po
po/da/: kruler.po
po/de/: kruler.po
po/de/docs/kruler/: index.docbook
po/el/: kruler.po
po/en_GB/: kruler.po
po/eo/: kruler.po
po/es/: kruler.po
po/es/docs/kruler/: index.docbook
po/et/: kruler.po
po/eu/: kruler.po
po/fa/: kruler.po
po/fi/: kruler.po
po/fr/: kruler.po
po/fr/docs/kruler/: index.docbook
po/fy/: kruler.po
po/ga/: kruler.po
po/gl/: kruler.po
po/he/: kruler.po
po/hi/: kruler.po
po/hne/: kruler.po
po/hr/: kruler.po
po/hu/: kruler.po
po/ia/: kruler.po
po/id/: kruler.po
po/id/docs/kruler/: index.docbook
po/is/: kruler.po
po/it/: kruler.po
po/it/docs/kruler/: index.docbook
po/ja/: kruler.po
po/ka/: kruler.po
po/kk/: kruler.po
po/km/: kruler.po
po/ko/: kruler.po
po/lt/: kruler.po
po/lv/: kruler.po
po/mk/: kruler.po
po/ml/: kruler.po
po/mr/: kruler.po
po/ms/: kruler.po
po/nb/: kruler.po
po/nds/: kruler.po
po/ne/: kruler.po
po/nl/: kruler.po
po/nl/docs/kruler/: index.docbook
po/nn/: kruler.po
po/oc/: kruler.po
po/pa/: kruler.po
po/pl/: kruler.po
po/pt/: kruler.po
po/pt/docs/kruler/: index.docbook
po/pt_BR/: kruler.po
po/pt_BR/docs/kruler/: index.docbook
po/ro/: kruler.po
po/ru/: kruler.po
po/ru/docs/kruler/: index.docbook
po/sa/: kruler.po
po/se/: kruler.po
po/si/: kruler.po
po/sk/: kruler.po
po/sl/: kruler.po
po/sl/docs/kruler/: index.docbook
po/sq/: kruler.po
po/sr/: kruler.po
po/sr@ijekavian/: kruler.po
po/sr@ijekavianlatin/: kruler.po
po/sr@latin/: kruler.po
po/sv/: kruler.po
po/sv/docs/kruler/: index.docbook
po/ta/: kruler.po
po/tg/: kruler.po
po/th/: kruler.po
po/tr/: kruler.po
po/tr/docs/kruler/: index.docbook
po/ug/: kruler.po
po/uk/: kruler.po
po/uk/docs/kruler/: index.docbook
po/uz/: kruler.po
po/uz@cyrillic/: kruler.po
po/vi/: kruler.po
po/xh/: kruler.po
po/zh_CN/: kruler.po
po/zh_HK/: kruler.po
po/zh_TW/: kruler.po
